Corrected z-index for sign in menu and search

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -413,7 +413,7 @@ input#searchsubmit {
 div#accountMenu {
     background: #fff;
     position: absolute;
-    z-index: 999;
+    z-index: 9999;
     right: 0px;
     width: 210px !important;
     top: 36px;
